Tests bug fix.